# Observatory-Global

./: .env.example  .gitignore  AGENTS.md  ATLAS_REVIEW.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  GEMINI.md  ITERATION-2-QUICK-START.md  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  SESSION_LOG.md  STATUS.md  api_response.json  atlas.py  flows_response.json  fly.toml  query.py  query_flows.py  walkthrough.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-nlp.txt  start.sh  test_nodes.py
backend/api/: __init__.py  indicators.py
backend/app/: __init__.py  db.py  main.py  main_v2.py  utils.py
backend/connectors/: __init__.py  base.py  newsapi.py  rss.py
backend/db/: migrate_v2.sql  schema_v2.sql  schema_v2_authoritative.sql
backend/enrichment/: __init__.py  lexicon_sentiment.py  nlp_pipeline.py  nlp_worker.py  summarizer.py  title_fetcher.py
backend/indicators/: __init__.py  normalized_volume.py  source_diversity.py  source_quality 2.py  source_quality.py
backend/ingestion/: __init__.py  supervisor.py
backend/migrations/: 003_anomaly_baseline.sql  003_crisis_schema.sql  004_data_lifecycle_config 2.sql  005_ingestion_tracking.sql  006_aggregates.sql  006_fips_to_iso.sql  007_signals_dedup.sql  008_source_provenance.sql  009_trends_v2_constraint.sql  010_theme_country_hourly.sql  011_nlp_columns.sql  012_geo_validation.sql  013_signals_created_at_index.sql  014_nlp_multilingual_shadow.sql  015_nlp_progress.sql  016_nlp_method.sql  017_country_heat_v2.sql  018_nlp_corrections.sql  (+7 more)
(+476 files in other folders)
